--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 50px;
 }
+
+button {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    size: 30px;
+}
